--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "compression": "^1.7.4",
     "dotenv": "^8.0.0",
     "eslint": "5.16.0",
+    "eslint-config-prettier": "^5.1.0",
     "eslint-plugin-eslint-plugin": "^2.1.0",
     "eslint-plugin-jest": "^22.7.1",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
+    "prettier": "^1.18.2",
     "typescript": "^3.5.2"
   }
 }
