--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "formik": "^1.5.7",
     "jss": "^9.8.7",
     "next": "8.1.0",
+    "ramda": "^0.26.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-jss": "^8.6.1",
-    "styled-components": "v5.0.0-beta.5"
+    "styled-components": "v5.0.0-beta.5",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@types/compression": "0.0.36",
@@ -28,10 +30,12 @@
     "@types/jss": "^9.5.8",
     "@types/next": "^8.0.5",
     "@types/node": "^12.0.10",
+    "@types/ramda": "^0.26.10",
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
     "@types/react-jss": "^8.6.3",
     "@types/styled-components": "^4.1.16",
+    "@types/yup": "^0.26.17",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "babel-plugin-inline-react-svg": "^1.1.0",
