--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
   "presets": ["next/babel", "@zeit/next-typescript/babel"],
-  "plugins": ["babel-plugin-styled-components", "inline-react-svg"]
+  "plugins": [
+    [
+      "styled-components",
+      { "ssr": true, "displayName": true, "preprocess": false }
+    ],
+    "inline-react-svg"
+  ]
 }
