--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.1.2",
+    "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.1.2",
     "@zeit/next-typescript": "^1.1.1",
@@ -21,7 +21,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-jss": "^8.6.1",
-    "styled-components": "v5.0.0-beta.5",
+    "styled-components": "^4.3.2",
     "yup": "^0.27.0"
   },
   "devDependencies": {
@@ -30,12 +30,12 @@
     "@types/jss": "^9.5.8",
     "@types/next": "^8.0.5",
     "@types/node": "^12.0.10",
-    "@types/ramda": "^0.26.10",
+    "@types/ramda": "^0.26.12",
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
     "@types/react-jss": "^8.6.3",
     "@types/styled-components": "^4.1.16",
-    "@types/yup": "^0.26.17",
+    "@types/yup": "^0.26.18",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "babel-plugin-inline-react-svg": "^1.1.0",
