--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
   "presets": ["next/babel", "@zeit/next-typescript/babel"],
   "plugins": [
+    "inline-react-svg",
     [
       "styled-components",
       { "ssr": true, "displayName": true, "preprocess": false }
-    ],
-    "inline-react-svg"
+    ]
   ]
 }
