--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mthash-frontend",
   "scripts": {
-    "dev": "cross-env node --max-old-space-size=16384 server/server.js",
-    "start": "cross-env NODE_ENV=production PORT=8080 node --max-old-space-size=1024 server/server.js",
+    "dev": "cross-env PORT=3001 node --max-old-space-size=16384 server/server.js",
+    "start": "cross-env NODE_ENV=production PORT=80 node --max-old-space-size=1024 server/server.js",
     "build": "next build"
   },
   "dependencies": {
@@ -11,6 +11,8 @@
     "@material-ui/styles": "^4.1.2",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.0",
+    "babel-plugin-inline-react-svg": "^1.1.0",
+    "babel-plugin-styled-components": "^1.10.2",
     "body-parser": "^1.19.0",
     "cross-env": "^5.2.0",
     "compression": "^1.7.4",
@@ -40,8 +42,6 @@
     "@types/yup": "^0.26.18",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
-    "babel-plugin-inline-react-svg": "^1.1.0",
-    "babel-plugin-styled-components": "^1.10.2",
     "eslint": "5.16.0",
     "eslint-config-prettier": "^5.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
