--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     [
       "styled-components",
       { "ssr": true, "displayName": true, "preprocess": false }
-    ]
+    ],
+    "@babel/plugin-proposal-optional-chaining"
   ]
 }
