--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "babel-plugin-inline-react-svg": "^1.1.0",
     "babel-plugin-styled-components": "^1.10.2",
     "body-parser": "^1.19.0",
-    "cross-env": "^5.2.0",
     "compression": "^1.7.4",
+    "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "formik": "^1.5.7",
+    "js-cookie": "^2.2.0",
     "jss": "^9.8.7",
     "next": "8.1.0",
+    "next-cookies": "^1.1.2",
     "ramda": "^0.26.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -29,8 +31,10 @@
     "yup": "^0.27.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@types/compression": "0.0.36",
     "@types/express": "^4.17.0",
+    "@types/js-cookie": "^2.2.2",
     "@types/jss": "^9.5.8",
     "@types/next": "^8.0.5",
     "@types/node": "^12.0.10",
