--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": ["next/babel", "@zeit/next-typescript/babel"],
   "plugins": [
     "inline-react-svg",
+    "styled-jsx/babel",
     [
       "styled-components",
       { "ssr": true, "displayName": true, "preprocess": false }
