--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build"
   },
   "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.1.2",
@@ -28,10 +29,10 @@
     "react-dom": "16.8.6",
     "react-jss": "^8.6.1",
     "styled-components": "^4.3.2",
+    "styled-jsx": "^3.2.1",
     "yup": "^0.27.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@types/compression": "0.0.36",
     "@types/express": "^4.17.0",
     "@types/js-cookie": "^2.2.2",
