--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-jss": "^8.6.3",
     "@types/styled-components": "^4.1.16",
+    "@types/styled-jsx": "^2.2.8",
     "@types/yup": "^0.26.18",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
