--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-inline-react-svg": "^1.1.0",
     "babel-plugin-styled-components": "^1.10.2",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.8.0",
     "compression": "^1.7.4",
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
