--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "16.8.6",
     "styled-components": "^4.3.2",
     "styled-jsx": "^3.2.1",
+    "unstated-next": "^1.1.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
