--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,11 @@
 {
-  "presets": ["next/babel", "@zeit/next-typescript/babel"],
+  "presets": ["next/babel"],
   "plugins": [
     "inline-react-svg",
     "styled-jsx/babel",
     [
       "styled-components",
       { "ssr": true, "displayName": true, "preprocess": false }
-    ],
-    "@babel/plugin-proposal-optional-chaining"
+    ]
   ]
 }
