--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "mthash-frontend",
   "scripts": {
+    "next": "next",
     "dev": "cross-env PORT=3001 node --max-old-space-size=16384 server/server.js",
     "start": "cross-env NODE_ENV=production PORT=80 node --max-old-space-size=1024 server/server.js",
     "build": "next build"
   },
   "dependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@material-ui/core": "^4.1.3",
+    "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.1.2",
-    "@zeit/next-typescript": "^1.1.1",
+    "@material-ui/styles": "^4.2.0",
     "axios": "^0.19.0",
     "babel-plugin-inline-react-svg": "^1.1.0",
     "babel-plugin-styled-components": "^1.10.6",
@@ -20,10 +19,10 @@
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "formik": "^1.5.7",
+    "formik": "^1.5.8",
     "js-cookie": "^2.2.0",
     "jss": "^9.8.7",
-    "next": "8.1.0",
+    "next": "^9.0.1",
     "next-cookies": "^1.1.2",
     "ramda": "^0.26.1",
     "react": "16.8.6",
@@ -38,16 +37,16 @@
     "@types/express": "^4.17.0",
     "@types/js-cookie": "^2.2.2",
     "@types/jss": "^9.5.8",
-    "@types/next": "^8.0.5",
-    "@types/node": "^12.0.12",
+    "@types/next": "^8.0.6",
+    "@types/node": "^12.6.2",
     "@types/ramda": "^0.26.15",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
-    "@types/styled-components": "^4.1.16",
+    "@types/styled-components": "^4.1.18",
     "@types/styled-jsx": "^2.2.8",
-    "@types/yup": "^0.26.20",
-    "@typescript-eslint/eslint-plugin": "^1.11.0",
-    "@typescript-eslint/parser": "^1.11.0",
+    "@types/yup": "^0.26.21",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
     "eslint": "5.16.0",
     "eslint-config-prettier": "^5.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -58,6 +57,6 @@
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.1",
     "prettier": "^1.18.2",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.3"
   }
 }
