--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik": "^1.5.8",
     "js-cookie": "^2.2.0",
     "jss": "^9.8.7",
+    "jwt-decode": "^2.2.0",
     "next": "^9.0.1",
     "next-cookies": "^1.1.2",
     "ramda": "^0.26.1",
