--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mthash-frontend",
   "scripts": {
-    "next": "next",
+    "next:dev": "next",
     "dev": "cross-env PORT=3001 node --max-old-space-size=16384 server/server.js",
     "start": "cross-env NODE_ENV=production PORT=80 node --max-old-space-size=1024 server/server.js",
     "build": "next build"
@@ -10,6 +10,18 @@
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
+    "@types/compression": "0.0.36",
+    "@types/express": "^4.17.0",
+    "@types/js-cookie": "^2.2.2",
+    "@types/jss": "^9.5.8",
+    "@types/next": "^8.0.6",
+    "@types/node": "^12.6.2",
+    "@types/ramda": "^0.26.15",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
+    "@types/styled-components": "^4.1.18",
+    "@types/styled-jsx": "^2.2.8",
+    "@types/yup": "^0.26.21",
     "axios": "^0.19.0",
     "babel-plugin-inline-react-svg": "^1.1.0",
     "babel-plugin-styled-components": "^1.10.6",
@@ -30,22 +42,11 @@
     "react-dom": "16.8.6",
     "styled-components": "^4.3.2",
     "styled-jsx": "^3.2.1",
+    "typescript": "^3.5.3",
     "unstated-next": "^1.1.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
-    "@types/compression": "0.0.36",
-    "@types/express": "^4.17.0",
-    "@types/js-cookie": "^2.2.2",
-    "@types/jss": "^9.5.8",
-    "@types/next": "^8.0.6",
-    "@types/node": "^12.6.2",
-    "@types/ramda": "^0.26.15",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
-    "@types/styled-components": "^4.1.18",
-    "@types/styled-jsx": "^2.2.8",
-    "@types/yup": "^0.26.21",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
     "eslint": "5.16.0",
@@ -57,7 +58,6 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "prettier": "^1.18.2",
-    "typescript": "^3.5.3"
+    "prettier": "^1.18.2"
   }
 }
