--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
+    "@nivo/core": "^0.59.1",
+    "@nivo/line": "^0.59.3",
+    "@nivo/stream": "^0.59.3",
     "@types/compression": "0.0.36",
     "@types/express": "^4.17.0",
     "@types/js-cookie": "^2.2.2",
