--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ramda": "^0.26.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "string-template": "^1.0.0",
     "styled-components": "^4.3.2",
     "styled-jsx": "^3.2.1",
     "typescript": "^3.5.3",
