--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
