--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/styles": "^4.2.0",
     "@nivo/core": "^0.59.1",
     "@nivo/line": "^0.59.3",
+    "@nivo/pie": "^0.59.1",
     "@nivo/stream": "^0.59.3",
     "@types/compression": "0.0.36",
     "@types/express": "^4.17.0",
