--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
+    "@nivo/bar": "^0.59.2",
     "@nivo/core": "^0.59.1",
     "@nivo/line": "^0.59.3",
     "@nivo/pie": "^0.59.1",
