--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jwt-decode": "^2.2.0",
     "next": "^9.0.1",
     "next-cookies": "^1.1.2",
+    "numeral": "^2.0.6",
     "qs": "^6.7.0",
     "ramda": "^0.26.1",
     "react": "16.8.6",
