--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "js-cookie": "^2.2.0",
     "jss": "^9.8.7",
     "jwt-decode": "^2.2.0",
+    "kerberos": "^1.1.3",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.4",
     "next": "^9.2.1",
     "next-cookies": "^1.1.2",
+    "nodemon": "^2.0.2",
     "numeral": "^2.0.6",
     "qs": "^6.7.0",
     "ramda": "^0.26.1",
